@@ -3,6 +3,7 @@ The revision history for Net-Pcap
 2009.01.xx - 0.17 - Sebastien Aperghis-Tramoni (SAPER)
   - [BUGFIX] Fix allocated size in pcap_open(), pcap_createsrcstr()
     and pcap_parsesrcstr(). 
+  - [API] Now make the C-like API available by default.
   - [CODE] Replaced all occurrences of safemalloc() with Newx().
   - [DOC] Improved README.
   - [DOC] Mention Net::Pcap::Easy.
